test/spec_vectors/elem/fail/module_83.wat
(module (func $f) (table 1 externref) (elem (i32.const 0) $f))